<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding"
    android:paddingEnd="@dimen/padding">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/little_margin"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_marginTop="@dimen/biggest_margin"
                android:src="@drawable/img_login" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/little_margin">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_culture_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_margin"
                    android:text="@string/login_name"
                    android:textColor="@color/grey_black"
                    android:textSize="@dimen/big_medium_font"
                    android:textStyle="bold"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/plus_large_margin"
                android:hint="@string/hint_user"
                android:textColorHint="@color/grey_hint"
                android:layout_marginTop="@dimen/little_margin">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_user_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/plus_large_margin"
                android:textColorHint="@color/grey_hint"
                android:hint="@string/hint_password"
                android:layout_marginTop="@dimen/medium_margin">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_user_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/checkbox_text"
                android:textColor="@color/grey_light"
                app:useMaterialThemeColors="false"
                android:layout_marginTop="@dimen/medium_margin"
                android:id="@+id/checkbox"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigth_btn"
        app:layout_constraintBottom_toTopOf="@id/ll_text_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/login_btn_text"
        android:onClick="signIn"
        android:textSize="@dimen/title_font"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/little_margin"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_text_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/medium_margin"
        >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cadastrarUsuaria">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:textSize="@dimen/little_font"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text_color"
            android:textColor="@color/green"
            android:layout_marginLeft="@dimen/little_margin"
            android:textSize="@dimen/little_font"
            android:textStyle="bold"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
