<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Register.RegisterSelfie"
    android:paddingStart="@dimen/padding"
    android:paddingEnd="@dimen/padding">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/little_margin"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling"
        tools:layout_editor_absoluteX="41dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="@dimen/biggest_margin"
                android:src="@drawable/img_cadastro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/little_margin">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selfie_title"
                        android:textColor="@color/grey_black"
                        android:textSize="@dimen/title_big_font"
                        android:textStyle="bold"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/selfie_subtitle"
                        android:textColor="@color/grey_subtitle"
                        android:textSize="@dimen/medium_font"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="end">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/img_culture_logo" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/plus_large_margin"
                android:hint="@string/hint_selfie"
                android:textColorHint="@color/grey_hint"
                android:layout_marginTop="@dimen/medium_margin"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_cloud_upload_24"
                app:endIconTint="@color/green"
                android:focusable="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_register_document_front"
                    android:onClick="goToSelfieScreen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_register_selfie"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigth_btn"
        app:layout_constraintBottom_toTopOf="@id/img_phase2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/final_cadastro_btn_text"
        android:textSize="@dimen/title_font"
        android:textStyle="bold"
        android:onClick="collectSelfieData"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/little_margin"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_phase2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_register_step5"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>